# DrCCTProf

./: .gitignore  .gitmodules  CMakeLists.temp  CNAME  LICENSE  LOG.md  README.md  arm_rebuild.sh  build.sh  build_clean.sh  build_debug.sh  build_debug_for_multithread.sh  build_for_multithread.sh  build_with_hpcviewer_test.sh  deadlock.go  debug_rebuild.sh  dr_lulesh.sh  drcctlib.cpp.back  drcctlib_lulesh.sh  hpc_measurements_to_database.sh  index.html  log_clean.sh  lulesh.sh  machine_custom_hpc_fmt.sh.template  multithread_log_tar.sh  pin_lulesh.sh  rebuild.sh  rebuild_debug.sh  rebuild_run_tests.sh  signal_rebuild_test.sh  x86.drcctlib_instr_statistics.out.vclv98-134.hpc.ncsu.edu32157  x86_rebuild.sh
.github/ISSUE_TEMPLATE/: bug_report.md  build_error.md
.github/action_scripts/: configure.sh  make.sh  make_tests.sh
.github/workflows/: build.yml
appsamples/: build.sh
appsamples/src/lulesh1.0/: instrument.cc  (+5 more)
doc/: build_custom_client_tool.md
proto/: pprof_profile_pb2.py  pprof_profile_to_json.py  profile.proto  profile_pb2.py  profile_to_json.py
script/: run_cct_all_ins.sh  run_cct_all_ins_with_data_centric.sh  run_cct_datacentric_only.sh  run_cct_ins_counting.sh  run_cct_mem.sh  run_cct_mem_with_datatcentric.sh  run_cct_memory_with_data_centric_with_search.sh  run_null.sh  run_script_test.sh
scripts/: clean_logs.sh  config.sh  gen_server_cfg.sh  hpcviewer_fmt.sh  lulesh_test.sh  lulesh_test.sh.temp
scripts/build_tool/: clean_logs.sh  cmake_version.sh  dr_patch_add.sh  dr_patch_clean.sh  env_clean.sh  env_init.sh  gcc_version.sh  hpc_measurements_to_database.sh  hpcviewer_test.sh  machine_custom_hpc_fmt.sh.template  make.sh  make_clean.sh  make_tests.sh  make_tests_all.sh  remake.sh  signal_test.sh
scripts/clients/: run_cct_all_ins.sh  run_cct_ins_counting.sh  run_cct_mem.sh  run_cct_mem_with_data_centric.sh  run_cct_memory_with_data_centric_with_search.sh  run_cct_null.sh  run_client.sh  run_script_test.sh
src/: CMakeLists.txt  drcctlib.cpp  drcctlib.h  drcctlib_debug.h  drcctlib_define.h  drcctlib_global_share.h  drcctlib_if.cpp  drcctlib_if.h  memory_cache.h  shadow_memory.h  splay_tree.c  splay_tree.h  util_c.c  util_c.h
src/clients/all_instr_cct/: CMakeLists.txt  all_instr_cct.cpp
src/clients/drcctlib_goroutines/: CMakeLists.txt  cgo_defines.h  cgo_funcs.cpp  cgo_funcs.h  dr_go_wrap.cpp  dr_go_wrap.h  drcctlib_goroutines.cpp  elf_utils.cpp  elf_utils.h
src/clients/drcctlib_memory_only_clean_call/: CMakeLists.txt  drcctlib_memory_only_clean_call.cpp
src/clients/drcctlib_numa_client/: CMakeLists.txt  drcctlib_numa_client.cpp
src/clients/drcctlib_overhead_test/: CMakeLists.txt  drcctlib_overhead_test.cpp
src/clients/drcctlib_reuse_space_distance/: CMakeLists.txt  drcctlib_reuse_space_distance.cpp
src/clients/drcctlib_stack_memory_rate/: CMakeLists.txt  drcctlib_stack_memory_rate.cpp
src/clients/zerospy/: CMakeLists.txt  utils.h  zerospy.cpp
src/drcctlib/: CMakeLists.txt  drcctlib.cpp  drcctlib.h  drcctlib_defines.h  drcctlib_ext.h  drcctlib_filter_func_list.cpp  drcctlib_filter_func_list.h  drcctlib_global_share.h  drcctlib_hpcviewer_format.cpp  drcctlib_hpcviewer_format.h  drcctlib_pprof_format.cpp  drcctlib_pprof_format.h  drcctlib_priv_share.h  drcctlib_utils.cpp  drcctlib_utils.h  drcctlib_vscodeex_format.cpp  drcctlib_vscodeex_format.h  memory_cache.h  pprof_profile.pb-c.c  pprof_profile.pb-c.h  profile.pb-c.c  profile.pb-c.h  shadow_memory.h  splay_tree.c  splay_tree.cpp  splay_tree.h
test_apps/: build.sh  build_clean.sh
test_apps/src/: test_app_cct.c  test_app_cct.cpp  test_app_keep_running.cpp  test_app_keep_running_multithread.cpp  test_app_multithread.cpp  test_app_multithread.cxx  test_app_p0_512.cpp  test_app_reuse.cpp  test_app_reuse.cxx  test_app_signal.cpp  test_numa.cpp
tests/dr_overhead_test/: CMakeLists.txt  dr_overhead_test.cpp
tests/drcctlib_all_instr_cct/: CMakeLists.txt  drcctlib_all_instr_cct.cpp
tests/drcctlib_all_instr_cct_hpc_fmt/: CMakeLists.txt  drcctlib_all_instr_cct_hpc_fmt.cpp
tests/drcctlib_all_instr_cct_with_data_centric/: CMakeLists.txt  drcctlib_all_instr_cct_with_data_centric.cpp
tests/drcctlib_cct_only/: CMakeLists.txt  drcctlib_cct_only.cpp
tests/drcctlib_cct_only_op/: CMakeLists.txt  drcctlib_cct_only_op.cpp
tests/drcctlib_cct_only_with_data_centric/: CMakeLists.txt  drcctlib_cct_only_with_data_centric.cpp
tests/drcctlib_client/: CMakeLists.txt  drcctlib_client.cpp
tests/drcctlib_client_mem_only/: CMakeLists.txt  drcctlib_client_mem_only.cpp
tests/drcctlib_data_centric/: CMakeLists.txt
tests/drcctlib_deadspy/: CMakeLists.txt  drcctlib_deadspy.cpp
tests/drcctlib_instr_statistics/: CMakeLists.txt  drcctlib_instr_statistics.cpp
tests/drcctlib_instr_statistics_hpc_fmt/: CMakeLists.txt  drcctlib_instr_statistics_hpc_fmt.cpp
tests/drcctlib_memory_only/: CMakeLists.txt  drcctlib_memory_only.cpp
tests/drcctlib_memory_only_op/: CMakeLists.txt  drcctlib_memory_only_op.cpp
tests/drcctlib_memory_overhead_test/: CMakeLists.txt  drcctlib_memory_overhead_test.cpp
tests/drcctlib_memory_with_data_centric/: CMakeLists.txt  drcctlib_memory_with_data_centric.cpp
tests/drcctlib_memory_with_data_centric_op/: CMakeLists.txt  drcctlib_memory_with_data_centric_op.cpp
tests/drcctlib_memory_with_data_centric_with_search/: CMakeLists.txt  drcctlib_memory_with_data_centric_with_search.cpp
tests/drcctlib_null_tool/: CMakeLists.txt  drcctlib_null_tool.cpp
tests/drcctlib_reuse_distance/: CMakeLists.txt  drcctlib_reuse_distance.cpp
tests/drcctlib_reuse_distance_client_cache/: CMakeLists.txt  drcctlib_reuse_distance_client_cache.cpp
tests/drcctlib_reuse_distance_hpc_fmt/: CMakeLists.txt  drcctlib_reuse_distance_hpc_fmt.cpp
tests/drcctlib_reuse_distance_hpc_fmt_for_sweep3d/: CMakeLists.txt  drcctlib_reuse_distance_hpc_fmt_for_sweep3d.cpp
tests/drcctlib_reuse_distance_op/: CMakeLists.txt  drcctlib_reuse_distance_op.cpp
tests/drcctlib_test_client/: CMakeLists.txt  drcctlib_test_client.cpp
tests/drcctlib_time_overhead_test/: CMakeLists.txt  drcctlib_time_overhead_test.cpp
(+148 files in other folders)
